--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,7 +124,7 @@ nav ul {
 /* HERO SECTION */
 .hero {
   align-items: center;
-  background-image: url("/assets/images/codebkgd.gif");
+  background-image: url(https://techcrunch.com/wp-content/uploads/2019/03/final-gif.gif?w=1390&crop=1);
   display: flex;
   height: 300px;
   justify-content: center;
