added mobile styling and repo links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,58 +5,35 @@
   padding: 0;
 }
 :root {
+  --headerBkgd: #000000;
   /* --headerBkgd: #008000; */
-  --headerBkgd: black;
-  /* --headerHoverText: #ccff33; */
-  --headerHoverText: white;
   --headerText: #70e000;
+  --headerTextHover: #FFFFFF;
+  /* --headerTextHover: #ccff33; */
   --heroBorder: #70e000;
   --mainText:#70e000;
+  --mainTextHover: #FFFFFF;
+  --pageBkgd: #000000;
   /* --pageBkgd:#006400; */
-  --pageBkgd: black;
-  --cardBkgd: black;
+  --cardBkgd: #0000008f;
 }
 body {
   background-color: var(--pageBkgd);
   display: flex;
   flex-direction: column;
   font-family: 'Press Start 2P', cursive;
+  font-size: 14px;
   line-height: 1;
   margin: 0;
-  min-height: 100%;
-}    
-header {
-  align-items: center;
-  background-color: var(--headerBkgd);
-  color: var(--headerText);
-  display: flex;
-  justify-content: space-between;
-  padding: 1%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 html {
   height: 100%;
 }
-main {
-  color: var(--mainText);
-  display: flex;
-  flex-direction: column;
-  font-size: 120%;
-  margin: 0 auto;
-  max-width: 1200px;
-}  
-ol, ul {
-  list-style-type: none;
-}
-
-/* PAGE PROPERTIES */
-.flex {
-  display: flex;
-}
-.flex-center {
-  justify-content: center;
-}
-header h1 {
-  font-weight: bolder;
+i.fa,
+i.fas {
+  font-weight: 900;
 }
 img {
   align-items: center;
@@ -68,46 +45,35 @@ img {
   margin: 0 auto;
   width: 100px;
 }
-section {
-  display: flex;
-  justify-content: center;
-  margin: 25px 0;
-  max-width: 90%;
-}
-.section-content {
-  flex: 1 0 75%;
-  flex-wrap: wrap;
-  padding-left: 25px;
-  transition: background-color ease 0.2s;
-}
-.section-content > figure {
-  margin: 6px;
-}
-.section-left {
-  align-self: center;
-  flex: 25%;
-  text-align: right;
-  padding-right: 20px;
-}
-.section-right {
-  border-left: 15px groove var(--mainText);
-  flex: 75%;
-  flex-wrap: wrap;
-  padding-left: 30px;
-}
-.section-title {
-  flex: 1 0 25%;
-  align-self: center;
-  text-align: right;
-  padding-right: 20px;
+ol, ul {
+  list-style-type: none;
 }
 
 /* NAVBAR */
+.fa-user,
+.fa-code,
+.fa-address-card {
+  font-size: 20px;
+}
+header {
+  align-items: center;
+  background-color: var(--headerBkgd);
+  color: var(--headerText);
+  padding-bottom: -1%;
+  padding-left: 1%;
+  padding-right: 1%;
+  padding-top: 1%;
+}
 header h1 {
-  font-size: 250%;
-}  
-header li {
   font-size: 150%;
+  font-weight: bolder;
+}
+header h1 a {
+  color: var(--headerText);
+  text-decoration: none;
+}
+header li {
+  font-size: 100%;
   margin: 10px;
 }
 nav a {
@@ -116,24 +82,34 @@ nav a {
   text-decoration: none;
 }
 nav a:hover {
-  color: var(--headerHoverText);
-}  
-nav ul {
+  color: var(--headerTextHover);
+}
+.navbar-collapse {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
+}
+.navbar-toggler {
+  background-color: var(--headerText);
+  padding-left: 10px;
+}
+#navlist {
+  display: flex;
   list-style-type: none;
   min-width: 300px;
 }
 
-/* HERO SECTION */
+/* BANNER */
 .hero {
   align-items: center;
-  border: 10px solid var(--heroBorder);
+  background-attachment: fixed;
   background-image: url(https://techcrunch.com/wp-content/uploads/2019/03/final-gif.gif?w=1390&crop=1);
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: 10px solid var(--heroBorder);
   display: flex;
   height: 300px;
   justify-content: center;
-  width: 100%;
+  width: auto;
 }    
 .hero img {
   border-radius: 100%;
@@ -154,13 +130,75 @@ nav ul {
   line-height: 1;
 }
 
+/* MAIN */
+.flex {
+  display: flex;
+}  
+.flex-center {
+  justify-content: center;
+}
+main {
+  background-color: var(--pageBkgd);
+  color: var(--mainText);
+  display: flex;
+  flex-direction: column;
+  font-size: 120%;
+  margin: 0 auto;
+  max-width: 1200px;
+}
+section {
+  display: flex;
+  justify-content: center;
+  margin: 25px 0;
+  max-width: 90%;
+}
+section h2 a {
+  color: var(--mainText);
+}
+section h2 a:hover {
+  color: var(--mainTextHover);
+}
+.section-content {
+  flex: 1 0 75%;
+  flex-wrap: wrap;
+  padding-left: 25px;
+  transition: background-color ease 0.2s;
+}  
+.section-content > figure {
+  margin: 6px;
+}  
+.section-left {
+  align-self: center;
+  flex: 25%;
+  padding-right: 20px;
+  text-align: right;
+  text-decoration: underline;
+}  
+.section-right {
+  border-left: 15px groove var(--mainText);
+  flex: 75%;
+  flex-wrap: wrap;
+  padding-left: 30px;
+}  
+.section-title {
+  flex: 1 0 25%;
+  align-self: center;
+  text-align: right;
+  padding-right: 20px;
+}
+
+/* ABOUT ME */
+section article h4 {
+  /* text-decoration: underline; */
+  font-style: italic;
+}
+
 /* PROJECTS SECTION */
 .card-content {
   background-color: var(--cardBkgd);
-  bottom: 20px;
-  left: -1px;
-  padding: 20px 12px;
-  position: absolute;
+  bottom: 100px;
+  padding: 8px 0 2px 0;
+  position: relative;
 }
 .card-image {
   border: black;
@@ -180,7 +218,10 @@ nav ul {
 .card-small {
   border: 6px solid black;
   position: relative;
-  transition: border 0.2s, transform 0.2s;
+}
+.card-large:hover,
+.card-small:hover {
+  border: 8px solid white;
 }
 .card-small {
   height: 300px;
@@ -189,6 +230,15 @@ nav ul {
 .card-title {
   font-size: 1.2rem;
   text-align: center;
+}
+.card-title a {
+  color: var(--mainText);
+  text-decoration: none;
+  font-size: 14px;
+}
+.card-title a:hover {
+  color: var(--mainTextHover);
+  text-decoration: none;
 }
 
 /* CONTACT SECTION */
@@ -201,5 +251,66 @@ nav ul {
   color: var(--mainText);
 }
 .contactlinks a:hover {
-  color: var(--headerHoverText);
+  color: var(--headerTextHover);
+}
+
+/* MEDIA QUERIES */
+@media screen and (max-width: 700px) {
+/* @media screen and (max-width: 992px) { */
+  .card-large {
+    width: auto;
+}
+  .card-large, .card-small {
+      flex: 1 1 80%;
+  }
+  .fa-user,
+  .fa-code,
+  .fa-address-card {
+    display: none;
+    margin: 0px;
+  }
+  header, section, .hero {
+      flex-direction: column;
+  }
+  header h1 {
+    font-size: 175%;
+    margin-bottom: -2px;
+  }
+  .hero {
+      background-attachment: scroll;
+      height: auto;
+  }
+  .hero-content {
+      margin: 10px;
+      text-align: center;
+  }
+  main {
+    max-width: 992px;
+  }
+  .navbar-collapse {
+    display: flex;
+    justify-content: center;
+    margin-bottom: -20px;
+  }
+  #navlist {
+    justify-content: space-between;
+    padding-bottom: 0%;
+    padding-left: 0%;
+    padding-right: 0%;
+    padding-top: 0%;
+    font-size: 12px;
+  }
+  section {
+      max-width: 100%;
+      margin: 15px 25px;
+  }
+  .section-content {
+      border-top: 2px solid var(--blue);
+      border-left: none;
+      padding-left: 25px;
+      padding-right: 25px;
+  }
+  .section-title {
+      align-self: flex-start;
+  }
 }
